--- a/GaneshSoley/Supplier_Onboarding/Supplier_Mgmt_System/Input_Supplier_Details.xaml
+++ b/GaneshSoley/Supplier_Onboarding/Supplier_Mgmt_System/Input_Supplier_Details.xaml
@@ -66,6 +66,8 @@
       <AssemblyReference>UiPath.Excel</AssemblyReference>
       <AssemblyReference>UiPath.UIAutomationCore</AssemblyReference>
       <AssemblyReference>UiPath.System.Activities.Design</AssemblyReference>
+      <AssemblyReference>UiPath.Mail</AssemblyReference>
+      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
   <Sequence sap2010:Annotation.AnnotationText="This workflow input the Transaction Item's data in Supplier Entry form and saves it." DisplayName="Input_Supplier_Details" sap:VirtualizedContainerService.HintSize="556.666666666667,2986" sap2010:WorkflowViewState.IdRef="Sequence_1">
@@ -258,9 +260,9 @@
               </ui:Target>
             </ui:Click.Target>
           </ui:Click>
-          <ui:TypeInto AlterIfDisabled="{x:Null}" ClickBeforeTyping="{x:Null}" DelayBefore="{x:Null}" DelayBetweenKeys="{x:Null}" DelayMS="{x:Null}" SendWindowMessages="{x:Null}" SimulateType="{x:Null}" Activate="True" DisplayName="Type Into 'Date'" EmptyField="False" sap:VirtualizedContainerService.HintSize="434,134" sap2010:WorkflowViewState.IdRef="TypeInto_4" Text="[datetime.Today.AddDays(-43).ToShortDateString]">
+          <ui:TypeInto AlterIfDisabled="{x:Null}" ClickBeforeTyping="{x:Null}" DelayBefore="{x:Null}" DelayBetweenKeys="{x:Null}" DelayMS="{x:Null}" EmptyField="{x:Null}" SendWindowMessages="{x:Null}" Activate="True" DisplayName="Type Into 'Date'" sap:VirtualizedContainerService.HintSize="434,134" sap2010:WorkflowViewState.IdRef="TypeInto_8" SimulateType="True" Text="[now.AddDays(-43).ToString(&quot;MM/dd/yyyy&quot;)]">
             <ui:TypeInto.Target>
-              <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="b38bd98a-3bd8-48f3-9dd0-c75ab6a44393" InformativeScreenshot="691fa574f3746185ddcc59fefb01bc93" Selector="&lt;html app='chrome.exe' title='UiPath Demo App' /&gt;&lt;webctrl aria-role='combobox' tag='INPUT' type='text' aaname='Date' /&gt;">
+              <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="396fd4f9-43c0-40de-86bc-8b1971590284" InformativeScreenshot="de0d887e3b81b1c57ca5a00607bae2c3" Selector="&lt;html app='chrome.exe' title='UiPath Demo App' /&gt;&lt;webctrl aria-role='combobox' tag='INPUT' type='text' /&gt;">
                 <ui:Target.TimeoutMS>
                   <InArgument x:TypeArguments="x:Int32" />
                 </ui:Target.TimeoutMS>
