--- a/GaneshSoley/Supplier_Onboarding/Supplier_Mgmt_System/Search_External_Name.xaml
+++ b/GaneshSoley/Supplier_Onboarding/Supplier_Mgmt_System/Search_External_Name.xaml
@@ -9,7 +9,7 @@
   <sap:VirtualizedContainerService.HintSize>609.333333333333,2070</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>Search_External_Name_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
-    <scg:List x:TypeArguments="x:String" Capacity="50">
+    <scg:List x:TypeArguments="x:String" Capacity="26">
       <x:String>System.Activities</x:String>
       <x:String>System.Activities.Statements</x:String>
       <x:String>System.Activities.Expressions</x:String>
@@ -39,7 +39,7 @@
     </scg:List>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
-    <scg:List x:TypeArguments="AssemblyReference" Capacity="54">
+    <scg:List x:TypeArguments="AssemblyReference" Capacity="28">
       <AssemblyReference>System.Activities</AssemblyReference>
       <AssemblyReference>Microsoft.VisualBasic</AssemblyReference>
       <AssemblyReference>mscorlib</AssemblyReference>
@@ -81,22 +81,26 @@
       <TryCatch.Variables>
         <Variable x:TypeArguments="x:String" Name="imgFileName" />
         <Variable x:TypeArguments="ui:Image" Name="Screenshot" />
+        <Variable x:TypeArguments="x:String" Name="csvFileName" />
       </TryCatch.Variables>
       <TryCatch.Try>
         <Sequence sap:VirtualizedContainerService.HintSize="494,1613.33333333333" sap2010:WorkflowViewState.IdRef="Sequence_4">
+          <Sequence.Variables>
+            <Variable x:TypeArguments="x:Boolean" Name="IsCSVExists" />
+          </Sequence.Variables>
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
           <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="452,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Info" Message="[&quot;Search and Snapshot Started.&quot;]" />
-          <ui:BrowserScope Browser="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" UiBrowser="{x:Null}" BrowserType="Chrome" DisplayName="Attach Browser 'chrome.exe UiPath'" sap:VirtualizedContainerService.HintSize="452,1386.66666666667" sap2010:WorkflowViewState.IdRef="BrowserScope_1" InformativeScreenshot="a7d0e4a8b921632ad478065b4dbda980" Selector="&lt;html app='chrome.exe' title='UiPath Demo App' /&gt;">
+          <ui:BrowserScope Browser="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" UiBrowser="{x:Null}" BrowserType="Chrome" DisplayName="Attach Browser 'chrome.exe UiPath'" sap:VirtualizedContainerService.HintSize="452,864" sap2010:WorkflowViewState.IdRef="BrowserScope_1" InformativeScreenshot="a7d0e4a8b921632ad478065b4dbda980" Selector="&lt;html app='chrome.exe' title='UiPath Demo App' /&gt;">
             <ui:BrowserScope.Body>
               <ActivityAction x:TypeArguments="x:Object">
                 <ActivityAction.Argument>
                   <DelegateInArgument x:TypeArguments="x:Object" Name="ContextTarget" />
                 </ActivityAction.Argument>
-                <Sequence sap:VirtualizedContainerService.HintSize="418,1240.66666666667" sap2010:WorkflowViewState.IdRef="Sequence_3">
+                <Sequence sap:VirtualizedContainerService.HintSize="418,718" sap2010:WorkflowViewState.IdRef="Sequence_3">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -178,23 +182,6 @@
                       </ui:TakeScreenshot.Target>
                     </ui:TakeScreenshot>
                   </Sequence>
-                  <Assign DisplayName="Assign ImageFIle Name" sap:VirtualizedContainerService.HintSize="376,62" sap2010:WorkflowViewState.IdRef="Assign_1">
-                    <Assign.To>
-                      <OutArgument x:TypeArguments="x:String">[imgFileName]</OutArgument>
-                    </Assign.To>
-                    <Assign.Value>
-                      <InArgument x:TypeArguments="x:String">[in_Config("ImgFileName").ToString + "_" + Now.ToString("ddMMyyyy_hhmmss") + ".jpg"]</InArgument>
-                    </Assign.Value>
-                  </Assign>
-                  <ui:SaveImage DisplayName="Save Image" FileName="[in_Config(&quot;OutputPath&quot;).ToString + &quot;\&quot; + imgFileName]" sap:VirtualizedContainerService.HintSize="376,92" sap2010:WorkflowViewState.IdRef="SaveImage_1" Image="[Screenshot]" />
-                  <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="376,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="Info" Message="[&quot;Search and Snapshot Completed.&quot;]" />
-                  <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Invoke Send_Mail workflow" sap:VirtualizedContainerService.HintSize="376,114" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" LogEntry="No" LogExit="No" UnSafe="False" WorkflowFileName="Send_Mail.xaml">
-                    <ui:InvokeWorkflowFile.Arguments>
-                      <InArgument x:TypeArguments="sd:DataRow" x:Key="in_TransactionItem">[in_TransactionItem]</InArgument>
-                      <InArgument x:TypeArguments="x:String" x:Key="in_attachment">[in_Config("OutputPath").ToString + "\" + imgFileName]</InArgument>
-                      <InArgument x:TypeArguments="x:String" x:Key="in_ReceiverMailID">[in_Config("ReceiverMailID").ToString]</InArgument>
-                    </ui:InvokeWorkflowFile.Arguments>
-                  </ui:InvokeWorkflowFile>
                 </Sequence>
               </ActivityAction>
             </ui:BrowserScope.Body>
@@ -205,6 +192,23 @@
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
           </ui:BrowserScope>
+          <Assign DisplayName="Assign ImageFIle Name" sap:VirtualizedContainerService.HintSize="452,62" sap2010:WorkflowViewState.IdRef="Assign_1">
+            <Assign.To>
+              <OutArgument x:TypeArguments="x:String">[imgFileName]</OutArgument>
+            </Assign.To>
+            <Assign.Value>
+              <InArgument x:TypeArguments="x:String">[in_TransactionItem("External_Name").ToString + "_" + Now.ToString("ddMMyyyy_hhmmss") + ".jpg"]</InArgument>
+            </Assign.Value>
+          </Assign>
+          <ui:SaveImage DisplayName="Save Image" FileName="[Environment.CurrentDirectory + &quot;\&quot; + in_Config(&quot;OutputPath&quot;).ToString + &quot;\&quot; + imgFileName]" sap:VirtualizedContainerService.HintSize="452,92" sap2010:WorkflowViewState.IdRef="SaveImage_1" Image="[Screenshot]" />
+          <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="452,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="Info" Message="[&quot;Search and Snapshot Completed.&quot;]" />
+          <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Invoke Send_Mail workflow" sap:VirtualizedContainerService.HintSize="452,114" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" LogEntry="No" LogExit="No" UnSafe="False" WorkflowFileName="Send_Mail.xaml">
+            <ui:InvokeWorkflowFile.Arguments>
+              <InArgument x:TypeArguments="sd:DataRow" x:Key="in_TransactionItem">[in_TransactionItem]</InArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="in_attachment">[in_Config("OutputPath").ToString + "\" + imgFileName]</InArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="in_ReceiverMailID">[in_Config("ReceiverMailID").ToString]</InArgument>
+            </ui:InvokeWorkflowFile.Arguments>
+          </ui:InvokeWorkflowFile>
         </Sequence>
       </TryCatch.Try>
       <TryCatch.Catches>
